--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
 		"dev": "env NODE_ENV=development webpack-dev-server --config webpack.dev.config.js --https",
 		"build": "webpack --config webpack.prod.config.js",
 		"zip": "rm -rf zzz/sphere.zip & zip -rj zzz/sphere.zip public/*",
-		"start": "npm run dev"
+		"start": "npm run dev",
+        "lint": "eslint src/**/**/*"
 	},
 	"author": "edil3ra",
 	"license": "MIT",
