--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"build": "webpack --config webpack.prod.config.js",
 		"zip": "rm -rf zzz/sphere.zip & zip -rj zzz/sphere.zip public/*",
 		"start": "npm run dev",
-        "lint": "eslint src/**/**/*"
+		"lint": "eslint src/**/**/*"
 	},
 	"author": "edil3ra",
 	"license": "MIT",
@@ -46,7 +46,8 @@
 		"@gamedistribution.com/html5-sdk": "0.0.2",
 		"phaser": "^3.50.0",
 		"phaser3-webfont-loader": "^1.0.0",
-		"webfontloader": "^1.6.28"
+		"webfontloader": "^1.6.28",
+		"xstate": "^4.16.0"
 	},
 	"parcelCleanPaths": [
 		"dist"
