--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.spherebreak.app"
-          android:versionCode="3"
-          android:versionName="1.3"
+          android:versionCode="4"
+          android:versionName="1.4"
           >
 
   <application
@@ -64,7 +64,7 @@
   <!-- Geolocation API -->
   <!-- <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> -->
   <!-- <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /> -->
-  <uses-feature android:name="android.hardware.location.gps" />
+  <!-- <uses-feature android:name="android.hardware.location.gps" /> -->
   <!-- Network API -->
   <!-- <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> -->
   <!-- Navigator.getUserMedia -->
@@ -72,5 +72,7 @@
   <!-- <uses-permission android:name="android.permission.CAMERA" /> -->
   <!-- Audio -->
   <!-- <uses-permission android:name="android.permission.RECORD_AUDIO" /> -->
+  
   <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
+  <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
 </manifest>
