--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools"
           package="com.spherebreak.app"
           android:versionCode="4"
           android:versionName="1.4"
@@ -73,6 +74,9 @@
   <!-- Audio -->
   <!-- <uses-permission android:name="android.permission.RECORD_AUDIO" /> -->
   
-  <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
-  <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+  <!-- <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/> -->
+  <uses-permission tools:node="remove" android:name="android.permission.READ_PHONE_STATE" />
+  <uses-permission tools:node="remove" android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+  <uses-permission tools:node="remove" android:name="android.permission.READ_EXTERNAL_STORAGE" />
+  
 </manifest>
